--- a/code/style.css
+++ b/code/style.css
@@ -136,13 +136,13 @@ a:visited, a:link {
 .card1:focus p, .card2:focus p, .card3:focus p, .card4:focus p, .card5:focus p, .card6:focus p, .card7:focus p, .card8:focus p {
   display: flex;
   position: absolute;
-  justify-content: center;
-  align-items: center;
   text-align: center;
   flex-direction: column;
-  width: auto;
-  flex-wrap: wrap;
+  
+  
+  
 }
+
 
 
 
@@ -230,9 +230,16 @@ li {
     font-size: 14px;
     line-height: 20px; 
     flex-wrap: wrap;
-    max-width: 70%;
+    
     
   }
+
+  @-moz-document url-prefix() {
+    .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p,
+  .card1:focus p, .card2:focus p, .card3:focus p, .card4:focus p, .card5:focus p, .card6:focus p, .card7:focus p, .card8:focus p {
+      width: 75%;
+    }
+  }  
 }
 
 
@@ -277,7 +284,15 @@ li {
 
   .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
     line-height: 25px;
+    
     }
+
+    @-moz-document url-prefix() {
+      .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p,
+    .card1:focus p, .card2:focus p, .card3:focus p, .card4:focus p, .card5:focus p, .card6:focus p, .card7:focus p, .card8:focus p {
+        width: 40%;
+      }
+    }  
 
     
   }
@@ -295,6 +310,16 @@ li {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
   }
+
+ 
+
+    @-moz-document url-prefix() {
+      .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p,
+    .card1:focus p, .card2:focus p, .card3:focus p, .card4:focus p, .card5:focus p, .card6:focus p, .card7:focus p, .card8:focus p {
+        width: 20%;
+        line-height: 20px;
+      }
+    }
 }
 
 /*FOOTER*/
