--- a/code/style.css
+++ b/code/style.css
@@ -14,26 +14,21 @@ min-width: 900px;
   display:flex;
   flex-direction: row;
   width:100%;
- 
   margin: 0 auto;
  padding: 0, 30px;
   
 }
 
-.nav-bar {
-  
+.nav-bar { 
   background-color: rgb(0, 0, 0);
- 
- 
-
   display: flex;
   width:100%;
 }
 
 .nav-bar img{
   margin: 20px 10px;
-  height: 100px;
-  width:100px;
+  height: 50px;
+  width:40px;
   opacity: 70%;
   
 }
@@ -45,7 +40,7 @@ min-width: 900px;
   color: antiquewhite;
  font-size: 20px;
  font-family: 'The Nautigal';
- margin: 30px 10px;
+ margin: 30px 5px;
 
 opacity: 80%;
  
@@ -53,30 +48,28 @@ opacity: 80%;
 }
 
 .media-icons{
- 
+ text-align: end;
   color:rgba(250, 235, 215, 0.438);
   width: 100%;
- margin-left: 20px;
- text-align: end;
- display: inline-block;
-  padding: 10px;
-  font-size: medium;
-  letter-spacing: 1px;
+  font-size: small;
+  
 }
 
 .navbar-nav li a {
   
-  font-size: 11px;
+  font-size: 10px;
   cursor: pointer;
   text-decoration: none;
-  font-weight: bold;
-  font-family: 'The Nautigal', cursive;
+  font-weight: bolder;
   background-color: black;
  display: inline-block;
  color: rgba(250, 235, 215, 0.438);
  
  }
-
+ .navbar-nav li a:hover{
+   color:rgba(250, 235, 215, 0.438); 
+   opacity: 70%;
+ }
 
  .highlights{
   display:none;
@@ -98,13 +91,24 @@ opacity: 80%;
     cursor: pointer;
     text-decoration: none;
     font-weight: bold;
-    font-family: 'The Nautigal', cursive;
-    letter-spacing: 1px ;
+    font-family: 'The Nautigal';
+    letter-spacing: 2px ;
     display: inline-block;
     padding: 40px 0 0 0;
     margin-top: 40px;
-    flex: 4;
+    padding:30px;
   }
+  .media-icons{
+    color:rgba(250, 235, 215, 0.438);
+    width: 100%;
+   margin-left: 20px;
+   text-align: end;
+   display: inline-block;
+    padding: 10px;
+    font-size: large;
+    letter-spacing: 1px;
+     
+   }
   .nav-bar img{
     margin: 10px;
     height: 90px;
@@ -147,16 +151,11 @@ opacity: 80%;
   
    
    .navbar-nav li a:hover {
-     color:antiquewhite;
-     opacity: 40%;
-     transform: scale(1.2);
+     
+     transform: scale(1.02);
+     
     }
   
-    
-    
-    }
-  
-   
    
    .highlights{
     display:flex;
@@ -185,6 +184,8 @@ opacity: 80%;
     padding: 10px;
     font-style: italic;
   }  
+}
+  
 
 
 .main-news .container1{
