--- a/code/style.css
+++ b/code/style.css
@@ -192,8 +192,7 @@ min-width: 900px;
   justify-content: center;
   align-items: center;
   border: solid 3px black;
-  margin: 20px;
-  
+  margin: 20px; 
   border-radius: 20px;
 }
 
@@ -227,14 +226,15 @@ h3{
     }
 
 .main-news img{
-  max-width: 270px;
+  max-width: 300px;
   min-height:300px;
-  border-radius: 30px;
+ border-radius: 10px;
 }
 
 
 .container1 .latest-images{
   display:flex;
+
   margin: 30px;
 max-height: 400px;
 }
@@ -361,8 +361,6 @@ button{
 .featured-button{
   background-color: black;
   border: none;
- 
-
     padding: 10px;
   text-align: center;
   text-decoration: none;
@@ -406,6 +404,10 @@ color: black;
   text-decoration: none ;
   color: black;
   }
+  .news-section .latest-images{
+    text-align: justify;
+  }
+/*Using media queries to make news section repsonsive  */
 
   @media (min-width:1024px){
     
@@ -416,12 +418,7 @@ color: black;
       box-shadow: 4px 7px  rgba(17, 18, 20, 0.438);
       
     }
-    .news-section .latest-images{
-      display:flex;
-      justify-content: space-evenly;
-      text-align: justify;
     
-    }
     
      
 .featured-text{
@@ -430,15 +427,6 @@ color: black;
   
   }
 
- 
-
-  .main-news img{
-    height: 400px;
-    max-width: 400px;
-    margin: 40px;
-  }
-  
-  
   .arrow{
   color: red;
   font-size: 100px;
