--- a/code/style.css
+++ b/code/style.css
@@ -104,7 +104,7 @@ button:focus {
   margin-bottom: 2em;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .sub-header--navbar {
     transform: translateX(200%);
     transition: transform 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
@@ -122,7 +122,7 @@ button:focus {
 
 /* NAVBAR ON TABLET AND DESKTOP*/
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .nav-hamburger {
     transform: translateY(-1000%);
     transition: transform 500ms ease-in-out;
@@ -256,7 +256,7 @@ footer {
 
 /* MEDIA QUERIES */
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   body {
     font-size: 1em;
   }
@@ -313,9 +313,8 @@ footer {
   
 @media (max-width: 992px) {    
   .big-news--button {
-    transform: translateX(2000%);
-    transition: transform 250ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  }
+    display: none;
+    }
 
   .big-news:hover {
     transition: all 500 cubic-bezier(0.19, 1, 0.22, 1);
