--- a/code/style.css
+++ b/code/style.css
@@ -119,31 +119,39 @@ header.desktop img {
 /* Different colors when hovering over items of navbar */
 @media (min-width: 1025px) {
   .desktop .navbar:hover {
-    text-decoration: underline 30%;
-    text-underline-offset: 30%;
+    -webkit-text-decoration-line: underline;
+    text-decoration-line: underline;
+    text-decoration-thickness: 0.4rem;
+    text-underline-offset: 0.4rem;
   }
 
   .desktop .news:hover {
+    -webkit-text-decoration-color: rgb(255, 165, 0, 0.50);
     text-decoration-color: rgb(255, 165, 0, 0.50);
   }
 
   .desktop .law:hover {
+    -webkit-text-decoration-color: rgb(255, 255, 0, 0.50);
     text-decoration-color: rgb(255, 255, 0, 0.50);
   }
 
   .desktop .travel:hover {
+    -webkit-text-decoration-color: rgb(0, 128, 0, 0.50);
     text-decoration-color: rgb(0, 128, 0, 0.50);
   }
 
   .desktop .sports:hover {
+    -webkit-text-decoration-color: rgb(0, 0, 255, 0.50);
     text-decoration-color: rgb(0, 0, 255, 0.50);
   }
 
   .desktop .society:hover {
+    -webkit-text-decoration-color: rgb(75, 0, 130, 0.50);
     text-decoration-color: rgb(75, 0, 130, 0.50);
   }
 
   .desktop .weather:hover {
+    -webkit-text-decoration-color: rgb(238, 130, 238, 0.50);
     text-decoration-color: rgb(238, 130, 238, 0.50);
   }
 }
@@ -163,26 +171,22 @@ time {
 
 @-webkit-keyframes ticker {
   0% {
-    /* -webkit-transform: translate3d(0, 0, 0); */
     transform: translate3d(0, 0, 0);
     visibility: visible;
   }
 
   100% {
-    /* -webkit-transform: translate3d(-200%, 0, 0); */
     transform: translate3d(-200%, 0, 0);
   }
 }
 
 @keyframes ticker {
   0% {
-    /* -webkit-transform: translate3d(0, 0, 0); */
     transform: translate3d(0, 0, 0);
     visibility: visible;
   }
 
   100% {
-    /* -webkit-transform: translate3d(-200%, 0, 0); */
     transform: translate3d(-200%, 0, 0);
   }
 }
@@ -203,13 +207,13 @@ time {
   white-space: nowrap;
   padding-right: 100%;
   box-sizing: content-box;
-  /* -webkit-animation-iteration-count: infinite; */
+  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  /* -webkit-animation-timing-function: linear; */
+  -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
-  /* -webkit-animation-name: ticker; */
+  -webkit-animation-name: ticker;
   animation-name: ticker;
-  /* -webkit-animation-duration: 30s; */
+  -webkit-animation-duration: 10s;
   animation-duration: 10s;
 }
 
@@ -284,6 +288,7 @@ main {
     max-width: 800px;
     height: 168px;
     /* height calculation: font-size*line-height*lines-to-show; */
+    margin: 0 auto;
     text-align: justify;
     font-size: 20px;
     line-height: 1.2;
@@ -291,6 +296,7 @@ main {
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    /* can't manage to find why the ellipsis appears over the last letters of text instead of after in Sarafi */
   }
 }
 
@@ -322,6 +328,7 @@ main {
 }
 
 .card-picture img {
+  -o-object-fit: cover;
   object-fit: cover;
   width: 100%;
   height: 15rem;
@@ -365,14 +372,22 @@ footer {
   background-color: #82171A;
   color: white;
   padding: 0.5rem 1rem 1rem 1rem;
-  font-size: 0.75rem;
+  font-size: 1rem;
   font-family: 'Raleway', sans-serif;
 }
 
 .copyright, .follow {
   display: flex;
   align-items: flex-end;
+  -moz-column-gap: 0.5rem;
   column-gap: 0.5rem;
 }
+
+/* Bigger padding on mobile so there is enough space to be able to touch all icons properly */
+@media (min-width: 1025px) {
+  footer {
+    padding: 0.5rem;
+  }
+}  
 
 /* END Footer */
