cleaned the code

--- a/code/style.css
+++ b/code/style.css
@@ -89,19 +89,26 @@ header.mobile {
 
 
 /* START Header with logo, links and date only visible on desktop (min 1025px) */
-.navbar, time {
-  font-family: 'Raleway', sans-serif;
-  font-size: 1.2rem;
+
+header.desktop {
+  display: none;
 }
 
 header.desktop img {
   width: 12rem;
 }
 
-@media (max-width: 1024px) {
-  header.desktop {
-    display: none;
-  }
+.navbar, time {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.2rem;
+}
+
+.navbar {
+  color: black;
+}
+
+time {
+  color: #82171A;
 }
 
 @media (min-width: 1025px) {
@@ -156,14 +163,6 @@ header.desktop img {
   }
 }
 
-.navbar {
-  color: black;
-}
-
-time {
-  color: #82171A;
-}
-
 /* END Header with logo, links and date only visible on desktop (min 1025px) */
 
 
@@ -191,21 +190,21 @@ time {
   }
 }
 
+.ticker {
+  padding-right: 100%;
+}
+
 .ticker-wrap {
-  /* width: 100%; is it a useful property? need to test */
   overflow: hidden;
   height: 3rem;
   background: linear-gradient(to right, rgba(28, 0, 0, 1), rgba(231, 46, 52, 1));
-  box-sizing: content-box;
   padding: 0.3rem 0 0 100%;
 }
 
 .ticker-wrap .ticker {
   display: inline-block;
-  height: 1rem;
   line-height: 1rem;
   white-space: nowrap;
-  padding-right: 100%;
   box-sizing: content-box;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
@@ -221,7 +220,6 @@ time {
   display: inline-block;
   padding: 0 1rem 0.3rem 1rem;
   font-size: 1rem;
-  color: white;
 }
 
 /* END Header with ticker always visible */
@@ -240,13 +238,6 @@ main {
 
 /* START Feature section */
 
-@media (min-width: 1025px) {
-  .feature:hover {
-    background-color: white;
-    opacity: 0.8;
-  }
-}
-
 .feature {
   margin: 1rem 0;
   display: grid;
@@ -255,11 +246,8 @@ main {
   padding: 1rem 1rem;
 }
 
-@media (min-width: 1025px) {
-  .feature {
-    grid-template-columns: 3fr 2fr;
-    align-items: center;
-  }
+.feature-picture img {
+  width: 100%;
 }
 
 .feature-text {
@@ -275,15 +263,26 @@ main {
   display: none;
 }
 
+/* Opacity effect all over the feature section when hovering */
 @media (min-width: 1025px) {
+  .feature:hover {
+    background-color: white;
+    opacity: 0.8;
+  }
+
+  .feature {
+    grid-template-columns: 3fr 2fr;
+    align-items: center;
+  }
+
   .feature-headline {
     font-size: 1.75rem;
     text-align: center;
   }
 
+  /* Values to transform the overflow in an ellipsis, inspired by CodePen https://codepen.io/martinwolf/pen/qlFdp, but can't manage to find why the ellipsis appears over the last letters of text instead of after in Sarafi*/
   .feature-lead {
     display: block;
-    /* Values to transform the overflow in an ellipsis, inspired by CodePen https://codepen.io/martinwolf/pen/qlFdp */
     display: -webkit-box;
     max-width: 800px;
     height: 168px;
@@ -296,7 +295,6 @@ main {
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    /* can't manage to find why the ellipsis appears over the last letters of text instead of after in Sarafi */
   }
 }
 
@@ -305,26 +303,14 @@ main {
 
 /* START News section */
 
-.card-headline {
-  font-size: 1.5rem;
-  text-align: center;
-}
-
 .news-cards {
   background-color: rgb(240, 240, 240);
   color: black;
-}
-
-.news-cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   text-align: center;
   grid-gap: 1rem;
   margin-bottom: 1rem;
-}
-
-.card {
-  display: grid;
 }
 
 .card-picture img {
@@ -335,6 +321,11 @@ main {
   box-shadow: 0rem 0.15rem 0.3rem rgba(0, 0, 0, 0.50);
 }
 
+.card-headline {
+  font-size: 1.5rem;
+}
+
+/* Hover effet: different colours for each type of news, same as in navbar */
 @media (min-width: 1025px) {
   .news-cards .news:hover {
     box-shadow: 0.15rem 0.15rem 0.3rem rgb(255, 165, 0, 0.50);
@@ -370,7 +361,6 @@ footer {
   display: flex;
   justify-content: space-between;
   background-color: #82171A;
-  color: white;
   padding: 0.5rem 1rem 1rem 1rem;
   font-size: 1rem;
   font-family: 'Raleway', sans-serif;
@@ -388,6 +378,6 @@ footer {
   footer {
     padding: 0.5rem;
   }
-}  
+}
 
 /* END Footer */
